refactor: 개인 수정 사항 반영
- 구조 수정(appconfig 삭제)
- DTO의 역할 변경
- 랭킹 산정 로직 수정
- 랜덤 숫자 생성 로직 변경 (GeneratePolicy 인터페이스 삭제)
- 문자열 출력 방식 변경